[gd_scene load_steps=81 format=3 uid="uid://csjie6wd0oo8y"]

[ext_resource type="Script" path="res://scripts/enemies/boss_enemy.gd" id="1_xd023"]
[ext_resource type="Texture2D" uid="uid://dheyv1x8tcvtf" path="res://assets/enemies/BossEnemy/Enemy_spritesheet_boss.png" id="2_vifir"]
[ext_resource type="AudioStream" uid="uid://b8ty5tqe01ddm" path="res://sounds/enemies/Enemy dead mopa.mp3" id="3_pqucx"]
[ext_resource type="AudioStream" uid="uid://btnlr8rugdsm0" path="res://sounds/enemies/Enemy dead hidro.mp3" id="4_kgwdf"]
[ext_resource type="AudioStream" uid="uid://bvs8vrjqjbh73" path="res://sounds/enemies/Enemy dead knife.mp3" id="5_ptyhp"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_7e4kp"]
height = 1.52011

[sub_resource type="AtlasTexture" id="AtlasTexture_phkes"]
atlas = ExtResource("2_vifir")
region = Rect2(4464, 2696, 1488, 1348)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2f8m"]
atlas = ExtResource("2_vifir")
region = Rect2(5952, 2696, 1488, 1348)

[sub_resource type="AtlasTexture" id="AtlasTexture_puq4l"]
atlas = ExtResource("2_vifir")
region = Rect2(0, 4044, 1488, 1348)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ip7n"]
atlas = ExtResource("2_vifir")
region = Rect2(1488, 4044, 1488, 1348)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfw8u"]
atlas = ExtResource("2_vifir")
region = Rect2(0, 0, 1488, 1348)

[sub_resource type="AtlasTexture" id="AtlasTexture_ds84g"]
atlas = ExtResource("2_vifir")
region = Rect2(2976, 1348, 1488, 1348)

[sub_resource type="AtlasTexture" id="AtlasTexture_nkvlx"]
atlas = ExtResource("2_vifir")
region = Rect2(4464, 1348, 1488, 1348)

[sub_resource type="AtlasTexture" id="AtlasTexture_57uii"]
atlas = ExtResource("2_vifir")
region = Rect2(5952, 1348, 1488, 1348)

[sub_resource type="AtlasTexture" id="AtlasTexture_wghp5"]
atlas = ExtResource("2_vifir")
region = Rect2(0, 2696, 1488, 1348)

[sub_resource type="AtlasTexture" id="AtlasTexture_st81x"]
atlas = ExtResource("2_vifir")
region = Rect2(1488, 2696, 1488, 1348)

[sub_resource type="AtlasTexture" id="AtlasTexture_a7y86"]
atlas = ExtResource("2_vifir")
region = Rect2(2976, 2696, 1488, 1348)

[sub_resource type="AtlasTexture" id="AtlasTexture_j8xn3"]
atlas = ExtResource("2_vifir")
region = Rect2(0, 0, 1488, 1348)

[sub_resource type="AtlasTexture" id="AtlasTexture_juweo"]
atlas = ExtResource("2_vifir")
region = Rect2(2976, 5392, 1488, 1348)

[sub_resource type="AtlasTexture" id="AtlasTexture_ddgxj"]
atlas = ExtResource("2_vifir")
region = Rect2(4464, 5392, 1488, 1348)

[sub_resource type="AtlasTexture" id="AtlasTexture_8mrr2"]
atlas = ExtResource("2_vifir")
region = Rect2(5952, 5392, 1488, 1348)

[sub_resource type="AtlasTexture" id="AtlasTexture_1q4oc"]
atlas = ExtResource("2_vifir")
region = Rect2(0, 6740, 1488, 1348)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqjxy"]
atlas = ExtResource("2_vifir")
region = Rect2(0, 0, 1488, 1348)

[sub_resource type="AtlasTexture" id="AtlasTexture_rchw4"]
atlas = ExtResource("2_vifir")
region = Rect2(0, 8088, 1488, 1348)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwrod"]
atlas = ExtResource("2_vifir")
region = Rect2(0, 0, 1488, 1348)

[sub_resource type="AtlasTexture" id="AtlasTexture_20p08"]
atlas = ExtResource("2_vifir")
region = Rect2(2976, 4044, 1488, 1348)

[sub_resource type="AtlasTexture" id="AtlasTexture_eycvj"]
atlas = ExtResource("2_vifir")
region = Rect2(0, 0, 1488, 1348)

[sub_resource type="AtlasTexture" id="AtlasTexture_ncxmr"]
atlas = ExtResource("2_vifir")
region = Rect2(0, 0, 1488, 1348)

[sub_resource type="AtlasTexture" id="AtlasTexture_uf42d"]
atlas = ExtResource("2_vifir")
region = Rect2(1488, 8088, 1488, 1348)

[sub_resource type="AtlasTexture" id="AtlasTexture_utdu2"]
atlas = ExtResource("2_vifir")
region = Rect2(2976, 8088, 1488, 1348)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3wjl"]
atlas = ExtResource("2_vifir")
region = Rect2(4464, 8088, 1488, 1348)

[sub_resource type="AtlasTexture" id="AtlasTexture_aem8y"]
atlas = ExtResource("2_vifir")
region = Rect2(5952, 8088, 1488, 1348)

[sub_resource type="AtlasTexture" id="AtlasTexture_tscan"]
atlas = ExtResource("2_vifir")
region = Rect2(4464, 4044, 1488, 1348)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3qt4"]
atlas = ExtResource("2_vifir")
region = Rect2(5952, 4044, 1488, 1348)

[sub_resource type="AtlasTexture" id="AtlasTexture_c8r8q"]
atlas = ExtResource("2_vifir")
region = Rect2(0, 5392, 1488, 1348)

[sub_resource type="AtlasTexture" id="AtlasTexture_jo6od"]
atlas = ExtResource("2_vifir")
region = Rect2(1488, 5392, 1488, 1348)

[sub_resource type="AtlasTexture" id="AtlasTexture_omqkr"]
atlas = ExtResource("2_vifir")
region = Rect2(1488, 0, 1488, 1348)

[sub_resource type="AtlasTexture" id="AtlasTexture_gybcq"]
atlas = ExtResource("2_vifir")
region = Rect2(2976, 0, 1488, 1348)

[sub_resource type="AtlasTexture" id="AtlasTexture_bp3ch"]
atlas = ExtResource("2_vifir")
region = Rect2(4464, 0, 1488, 1348)

[sub_resource type="AtlasTexture" id="AtlasTexture_32cip"]
atlas = ExtResource("2_vifir")
region = Rect2(5952, 0, 1488, 1348)

[sub_resource type="AtlasTexture" id="AtlasTexture_777ko"]
atlas = ExtResource("2_vifir")
region = Rect2(0, 1348, 1488, 1348)

[sub_resource type="AtlasTexture" id="AtlasTexture_kw50b"]
atlas = ExtResource("2_vifir")
region = Rect2(1488, 1348, 1488, 1348)

[sub_resource type="AtlasTexture" id="AtlasTexture_72slm"]
atlas = ExtResource("2_vifir")
region = Rect2(0, 0, 1488, 1348)

[sub_resource type="AtlasTexture" id="AtlasTexture_6asq5"]
atlas = ExtResource("2_vifir")
region = Rect2(4464, 5392, 1488, 1348)

[sub_resource type="AtlasTexture" id="AtlasTexture_7koqw"]
atlas = ExtResource("2_vifir")
region = Rect2(5952, 5392, 1488, 1348)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5wv7"]
atlas = ExtResource("2_vifir")
region = Rect2(0, 6740, 1488, 1348)

[sub_resource type="AtlasTexture" id="AtlasTexture_clah4"]
atlas = ExtResource("2_vifir")
region = Rect2(1488, 6740, 1488, 1348)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1ig6"]
atlas = ExtResource("2_vifir")
region = Rect2(2976, 6740, 1488, 1348)

[sub_resource type="AtlasTexture" id="AtlasTexture_h62r0"]
atlas = ExtResource("2_vifir")
region = Rect2(4464, 6740, 1488, 1348)

[sub_resource type="AtlasTexture" id="AtlasTexture_ack1i"]
atlas = ExtResource("2_vifir")
region = Rect2(5952, 6740, 1488, 1348)

[sub_resource type="SpriteFrames" id="SpriteFrames_r8ur3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_phkes")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2f8m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_puq4l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ip7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfw8u")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ds84g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nkvlx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_57uii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wghp5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_st81x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a7y86")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j8xn3")
}],
"loop": true,
"name": &"attackdistance",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_juweo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ddgxj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8mrr2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1q4oc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqjxy")
}],
"loop": true,
"name": &"hitHidro",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rchw4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwrod")
}],
"loop": true,
"name": &"hitKnife",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_20p08")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eycvj")
}],
"loop": true,
"name": &"hitMopa",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ncxmr")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uf42d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_utdu2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3wjl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aem8y")
}],
"loop": false,
"name": &"knifeDeath",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tscan")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3qt4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c8r8q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jo6od")
}],
"loop": false,
"name": &"mopDeath",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_omqkr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gybcq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bp3ch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_32cip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_777ko")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kw50b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_72slm")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6asq5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7koqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5wv7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_clah4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1ig6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h62r0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ack1i")
}],
"loop": false,
"name": &"waterDeath",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_ocyer"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite3D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"walk"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite3D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_8e0hh"]
resource_name = "attack"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite3D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite3D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [],
"method": &"fast"
}, {
"args": [],
"method": &"attack"
}, {
"args": [],
"method": &"speedup"
}]
}

[sub_resource type="Animation" id="Animation_y2bur"]
resource_name = "attack_distance"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite3D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attackdistance"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite3D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.8, 1.2),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [],
"method": &"slowdown"
}, {
"args": [],
"method": &"shoot"
}, {
"args": [],
"method": &"speedup"
}]
}

[sub_resource type="Animation" id="Animation_dtwto"]
resource_name = "hit-hidro"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite3D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"hitHidro"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite3D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 4]
}

[sub_resource type="Animation" id="Animation_5qv2c"]
resource_name = "hit-mopa"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite3D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"hitMopa"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite3D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_an6yo"]
resource_name = "hitKnife"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite3D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"hitKnife"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite3D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_lnboa"]
resource_name = "knifeDeath"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite3D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"knifeDeath"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite3D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_llnm1"]
resource_name = "mopDeath"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite3D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"mopDeath"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite3D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_2vgse"]
resource_name = "walk"
length = 1.55
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite3D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"walk"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite3D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_yypqd"]
resource_name = "waterDeath"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite3D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"waterDeath"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite3D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sc7jo"]
_data = {
"RESET": SubResource("Animation_ocyer"),
"attack": SubResource("Animation_8e0hh"),
"attack_distance": SubResource("Animation_y2bur"),
"hit-hidro": SubResource("Animation_dtwto"),
"hit-mopa": SubResource("Animation_5qv2c"),
"hitKnife": SubResource("Animation_an6yo"),
"knifeDeath": SubResource("Animation_lnboa"),
"mopDeath": SubResource("Animation_llnm1"),
"walk": SubResource("Animation_2vgse"),
"waterDeath": SubResource("Animation_yypqd")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fm4uo"]
animation = &"attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wmq7w"]
animation = &"attack_distance"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ukjbu"]
animation = &"hit-hidro"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hdae1"]
animation = &"hit-mopa"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_oxo6w"]
animation = &"knifeDeath"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dvtm7"]
animation = &"mopDeath"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5vhn7"]
animation = &"walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5q5wg"]
animation = &"waterDeath"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vrc4j"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_24g6q"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wf6ay"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_uxyc7"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6xjvj"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_aoql7"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_sf27s"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_thp6s"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6kfqh"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_jmov2"]
states/attack/node = SubResource("AnimationNodeAnimation_fm4uo")
states/attack/position = Vector2(542, 63)
states/attack_distance/node = SubResource("AnimationNodeAnimation_wmq7w")
states/attack_distance/position = Vector2(601.075, 161)
states/hit-hidro/node = SubResource("AnimationNodeAnimation_ukjbu")
states/hit-hidro/position = Vector2(243.428, 227)
states/hit-mopa/node = SubResource("AnimationNodeAnimation_hdae1")
states/hit-mopa/position = Vector2(447.428, 227)
states/knifeDeath/node = SubResource("AnimationNodeAnimation_oxo6w")
states/knifeDeath/position = Vector2(742, 200)
states/mopDeath/node = SubResource("AnimationNodeAnimation_dvtm7")
states/mopDeath/position = Vector2(720, 53)
states/walk/node = SubResource("AnimationNodeAnimation_5vhn7")
states/walk/position = Vector2(379, 80)
states/waterDeath/node = SubResource("AnimationNodeAnimation_5q5wg")
states/waterDeath/position = Vector2(758, 134)
transitions = ["Start", "walk", SubResource("AnimationNodeStateMachineTransition_vrc4j"), "walk", "attack", SubResource("AnimationNodeStateMachineTransition_24g6q"), "attack", "walk", SubResource("AnimationNodeStateMachineTransition_wf6ay"), "hit-hidro", "walk", SubResource("AnimationNodeStateMachineTransition_uxyc7"), "walk", "hit-hidro", SubResource("AnimationNodeStateMachineTransition_6xjvj"), "hit-mopa", "walk", SubResource("AnimationNodeStateMachineTransition_aoql7"), "walk", "hit-mopa", SubResource("AnimationNodeStateMachineTransition_sf27s"), "walk", "attack_distance", SubResource("AnimationNodeStateMachineTransition_thp6s"), "attack_distance", "walk", SubResource("AnimationNodeStateMachineTransition_6kfqh")]
graph_offset = Vector2(-311.925, 35)

[node name="Boss_Enemy" type="CharacterBody3D" groups=["bossEnemy"]]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
script = ExtResource("1_xd023")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(2.96847, 0, 0, 0, 2.96847, 0, 0, 0, 2.96847, 0, 0.978739, 0)
shape = SubResource("CapsuleShape3D_7e4kp")

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform3D(0.504676, 0, 0, 0, 0.504676, 0, 0, 0, 0.504676, 0, 1.63261, 0)
shaded = true
sprite_frames = SubResource("SpriteFrames_r8ur3")
animation = &"walk"
autoplay = "idle"

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_desired_distance = 5.0
target_desired_distance = 5.0

[node name="AttackCooldown" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_sc7jo")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_jmov2")
advance_expression_base_node = NodePath("..")
anim_player = NodePath("../AnimationPlayer")

[node name="DeadMopa" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_pqucx")

[node name="DeadHidro" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_kgwdf")

[node name="DeadKnife" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_ptyhp")

[node name="GunRays" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.0729)

[node name="RayCast3D" type="RayCast3D" parent="GunRays"]
transform = Transform3D(-1, -8.74228e-08, 3.82137e-15, 0, -4.37114e-08, -1, 8.74228e-08, -1, 4.37114e-08, 0, 0.921744, 0.0945424)
collision_mask = 2

[node name="bullet_position" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00255727, 0.921873, 1.2808)

[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
